==> misaka15565/mspm0g3507_2024/driver/lcd.c <==
#include "lcd.h"
#include "driver/softspi.h"
#include "ti_msp_dl_config.h"
#define LCD_CS_SET
#define LCD_RS_SET DL_GPIO_setPins(TFT_DC_RS_PORT, TFT_DC_RS_PIN)
#define LCD_RST_SET DL_GPIO_setPins(TFT_RESET_PORT, TFT_RESET_PIN)
#define LCD_CS_CLR
#define LCD_RS_CLR DL_GPIO_clearPins(TFT_DC_RS_PORT, TFT_DC_RS_PIN)
#define LCD_RST_CLR DL_GPIO_clearPins(TFT_RESET_PORT, TFT_RESET_PIN)

void Lcd_WriteData_16Bit(u16 Data) {
  // 18Bit
  LCD_WR_DATA((Data >> 8) & 0xF8); // RED
  LCD_WR_DATA((Data >> 3) & 0xFC); // GREEN
  LCD_WR_DATA(Data << 3);          // BLUE
}

void LCD_RESET(void) {
  LCD_RST_CLR;
  // delay_ms(100);
  delay_cycles(7200000);
  LCD_RST_SET;
  delay_cycles(3600000);
}

void LCD_Init(void) {
  // SPI1_Init(); // 硬件SPI初始化
  //	SPI_SetSpeed(SPI1,SPI_BaudRatePrescaler_2);
  // LCD_GPIOInit(); // LCD GPIO初始化
  LCD_RESET(); // LCD 复位
  //************* ILI9488初始化**********//
  LCD_WR_REG(0XF7);
  LCD_WR_DATA(0xA9);
  LCD_WR_DATA(0x51);
  LCD_WR_DATA(0x2C);
  LCD_WR_DATA(0x82);
  LCD_WR_REG(0xC0);
  LCD_WR_DATA(0x11);
  LCD_WR_DATA(0x09);
  LCD_WR_REG(0xC1);
  LCD_WR_DATA(0x41);
  LCD_WR_REG(0XC5);
  LCD_WR_DATA(0x00);
  LCD_WR_DATA(0x0A);
  LCD_WR_DATA(0x80);
  LCD_WR_REG(0xB1);
  LCD_WR_DATA(0xB0);
  LCD_WR_DATA(0x11);
  LCD_WR_REG(0xB4);
  LCD_WR_DATA(0x02);
  LCD_WR_REG(0xB6);
  LCD_WR_DATA(0x02);
  LCD_WR_DATA(0x42);
  LCD_WR_REG(0xB7);
  LCD_WR_DATA(0xc6);
  LCD_WR_REG(0xBE);
  LCD_WR_DATA(0x00);
  LCD_WR_DATA(0x04);
  LCD_WR_REG(0xE9);
  LCD_WR_DATA(0x00);
  LCD_WR_REG(0x36);
  LCD_WR_DATA((1 << 3) | (0 << 7) | (1 << 6) | (1 << 5));
  LCD_WR_REG(0x3A);
  LCD_WR_DATA(0x66);
  LCD_WR_REG(0xE0);
  LCD_WR_DATA(0x00);
  LCD_WR_DATA(0x07);
  LCD_WR_DATA(0x10);
  LCD_WR_DATA(0x09);
  LCD_WR_DATA(0x17);
  LCD_WR_DATA(0x0B);
  LCD_WR_DATA(0x41);
  LCD_WR_DATA(0x89);
  LCD_WR_DATA(0x4B);
  LCD_WR_DATA(0x0A);
  LCD_WR_DATA(0x0C);
  LCD_WR_DATA(0x0E);
  LCD_WR_DATA(0x18);
  LCD_WR_DATA(0x1B);
  LCD_WR_DATA(0x0F);
  LCD_WR_REG(0XE1);
  LCD_WR_DATA(0x00);
  LCD_WR_DATA(0x17);
  LCD_WR_DATA(0x1A);
  LCD_WR_DATA(0x04);
  LCD_WR_DATA(0x0E);
  LCD_WR_DATA(0x06);
  LCD_WR_DATA(0x2F);
  LCD_WR_DATA(0x45);
  LCD_WR_DATA(0x43);
  LCD_WR_DATA(0x02);
  LCD_WR_DATA(0x0A);
  LCD_WR_DATA(0x09);
  LCD_WR_DATA(0x32);
  LCD_WR_DATA(0x36);
  LCD_WR_DATA(0x0F);
  LCD_WR_REG(0x11);
  delay_cycles(8640000);
  LCD_WR_REG(0x29);

  LCD_direction(USE_HORIZONTAL); // 设置LCD显示方向
  // LCD_LED = 1;                   // 点亮背光
  LCD_Clear(WHITE); // 清全屏白色
}
